Move client and get support for multiple chats and perms along with the setup packet beginnings.

--- a/static/index.html
+++ b/static/index.html
@@ -80,6 +80,7 @@
         </div>
     </main>
     <script src="./basic_client.js"></script>
+<script src="./frontend.js"></script>
   </body>
 
 </html>
